<resources>
    <string name="About">About</string>
    <string name="Cancel">Cancel</string>
    <string name="Continue">Continue</string>
    <string name="Donate">Donate</string>
    <string name="FAQ">FAQ</string>
    <string name="LeakDetected">Leak detected!</string>
    <string name="LogAppName">App Name</string>
    <string name="LogPackBlock">Total Packets Blocked</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Search">Search</string>
    <string name="XPosed_prefs_title">Xposed Related</string>
    <string name="Yes">Yes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="access_sort">Sort option</string>
    <string name="active_rules">Active rules</string>
    <string name="active_rules_summary">Apply firewall rules on every connectivity change (LAN/Wi-Fi/mobile-data/roam/tether)</string>
    <string name="addStartupDelaySummary">"AFWall+ will wait for 'n' seconds before applying the rules. Enable this setting only if the startup rules are not applying properly during boot."</string>
    <string name="addStartupDelayTitle">Startup Delay</string>
    <string name="add_delay">Add Delay</string>
    <string name="add_delay_rules">Apply rules with 1sec delay.</string>
    <string name="binaries">Binaries</string>
    <string name="busybox_pref">BusyBox binary</string>
    <string name="change_languages">Change Language</string>
    <string name="control_ipv6_title">Only Control IPv6 Chains</string>
    <string name="custom_title1">Custom name for Default Profile</string>
    <string name="custom_title2">Custom name for Profile 1</string>
    <string name="custom_title3">Custom name for Profile 2</string>
    <string name="custom_title4">Custom name for Profile 3</string>
    <string name="defaultProfile">Default</string>
    <string name="default_connection_setting_allow">Default whitelist behavior(Donate Only)</string>
    <string name="default_connection_setting_block">Default blacklist behavior(Donate Only)</string>
    <string name="defaultsort">By name (default)</string>
    <string name="delaySummary">AFWall+ waits for given seconds after startup before applying rules</string>
    <string name="delayTitle">Custom Seconds Delay</string>
    <string name="disable">Disable</string>
    <string name="disableTasterSummary">"Disable toast messages for Tasker's plugin"</string>
    <string name="disable_toaster">Disable Tasker toasts</string>
    <string name="dualAppsDesc">Support for Dual Apps, MIUI, Island and Work profile apps</string>
    <string name="dualAppsTitle">Dual Apps Support</string>
    <string name="enableConfirmTitle">Confirm AFWall+ disable</string>
    <string name="enableConfirm_summary_on">Firewall will ask for confirmation before being disabled</string>
    <string name="enableInboundSummary">Allow connections from the LAN to the phone (Samba, sshd, AirDroid, etc.)</string>
    <string name="enableInboundTitle">Enable inbound connections</string>
    <string name="enable_device_admin">Device admin</string>
    <string name="enable_firewall_log_service">Turn on log service</string>
    <string name="enable_protection">Enable protection</string>
    <string name="exit">Exit</string>
    <string name="exp_prefs_title">Experimental</string>
    <string name="exports">Export</string>
    <string name="fixleakSummary">Prevent data leaks during system startup. Your ROM must have init.d or su.d (superSU) support. HTC devices must be configured for S-OFF.</string>
    <string name="fixleakTitle">Fix startup data leak</string>
    <string name="forward_chain">FORWARD Chain (IPv4)</string>
    <string name="forward_chain_summary_off">Currently <b>BLOCKED</b> forwarding connections</string>
    <string name="forward_chain_summary_on">Currently <b>ALLOWED</b> forwarding connections</string>
    <string name="forward_chain_v6">FORWARD Chain (IPv6)</string>
    <string name="help">Help</string>
    <string name="hideicons_pref_summary_off">Show App icons in the main view</string>
    <string name="hideicons_pref_summary_on">Improve performance by disabling app icons in the main view</string>
    <string name="hideicons_pref_title">Hide app icons</string>
    <string name="imports">Import</string>
    <string name="init_d">Startup directory path for script</string>
    <string name="input_chain">INPUT Chain (IPv4)</string>
    <string name="input_chain_summary_off">Currently <b>BLOCKED</b> incoming connections</string>
    <string name="input_chain_summary_on">Currently <b>ALLOWED</b> incoming connections</string>
    <string name="input_chain_v6">INPUT Chain (IPv6)</string>
    <string name="iptables_pref">Iptables binary</string>
    <string name="ipv6_summary">Enable support for IPv6</string>
    <string name="ipv6_title">IPv6 support</string>
    <string name="lan_summary">Enable to control LAN permissions separately from Wi-Fi permissions</string>
    <string name="lan_title">LAN control</string>
    <string name="languages">Languages</string>
    <string name="lastupdated">By install/update</string>
    <string name="log_prefs_title">Log</string>
    <string name="log_target">Log Target</string>
    <string name="manage_profiles">Manage profiles</string>
    <string name="manage_profiles_summary">Add or remove profiles</string>
    <string name="menu">Menu</string>
    <string name="migrate_profiles">Migrate profiles</string>
    <string name="migrate_summary">Migrate all profile data</string>
    <string name="misc_header">Languages/Plugins</string>
    <string name="mode">Firewall Mode</string>
    <string name="mode_blacklist">Block selected</string>
    <string name="mode_whitelist">Allow selected</string>
    <string name="mp_prefs_title">Profiles</string>
    <string name="multi_apply_rules">Apply rules on profile switch</string>
    <string name="multi_apply_rules_info">Load and apply rules when switching profiles</string>
    <string name="multi_user_summary">Support Android multi-user (only works in mode where selected items are blocked)</string>
    <string name="multi_user_title">Enable multi-user support</string>
    <string name="multipleProfiles">Multiple profiles</string>
    <string name="network_debounce_summary">Delay rule application when network changes frequently (seconds)</string>
    <string name="network_debounce_title">Network change delay</string>
    <string name="notification_priority">Notification Priority</string>
    <string name="notify_pref_summary_off">No notification will be displayed when a new application is installed</string>
    <string name="notify_pref_summary_on">A notification will be displayed when a new application is installed</string>
    <string name="notify_pref_title">Enable notifications</string>
    <string name="output_chain">OUTPUT Chain (IPv4)</string>
    <string name="output_chain_summary_off">Currently <b>BLOCKED</b> outgoing connections</string>
    <string name="output_chain_summary_on">Currently <b>ALLOWED</b> outgoing connections</string>
    <string name="output_chain_v6">OUTPUT Chain (IPv6)</string>
    <string name="patternMaxTry">Maximum number of attempts</string>
    <string name="pingDelayTitle">Ping timeout</string>
    <string name="pref_device">Use Device Security Protection</string>
    <string name="pref_device_desc">Use device security check to open AFWall+ (donate/key feature)</string>
    <string name="preferences">Preferences</string>
    <string name="profile1">Profile 1</string>
    <string name="profile2">Profile 2</string>
    <string name="profile3">Profile 3</string>
    <string name="roaming">Roaming control</string>
    <string name="roamingSummary">Enable to control roaming permissions separately</string>
    <string name="rule_prefs_title">Rules Behaviour</string>
    <string name="rules_prefs_title">Rules/Connectivity</string>
    <string name="runNotification">Rules Progress</string>
    <string name="runNotification_summary">Notification will be shown when applying rules</string>
    <string name="sec_prefs_title">Security</string>
    <string name="set_custom_script">Set custom script</string>
    <string name="showAllApps">Show all apps</string>
    <string name="showFilter">Show filters</string>
    <string name="showUid">Show UID for apps</string>
    <string name="show_host">Show hostname</string>
    <string name="show_log">View log</string>
    <string name="showallapps_summary_off">Currently shows applications with INTERNET permission</string>
    <string name="showallapps_summary_on">Currently shows all installed applications (WARNING: disable this setting for better performance)</string>
    <string name="showfilter_summary_off">Filters (All/Core/System/User) are hidden in the main view</string>
    <string name="showfilter_summary_on">Filters (All/Core/System/User) are shown in the main view</string>
    <string name="showhost_desc">Display resolved hostname from DNS (Donate feature/Need INTERNET access to AFWall+)</string>
    <string name="showrules">Show rules</string>
    <string name="showuid_summary_off">"Hide app UID's in the main view. Enabling can be useful to track logs."</string>
    <string name="showuid_summary_on">"Show app UID's in the main view"</string>
    <string name="stealthMode">Stealth mode on pattern</string>
    <string name="tasker_prefs_title">Tasker Related</string>
    <string name="tetherSummary">Enable to control Bluetooth/USB tether connectivity</string>
    <string name="tether_profile">Tether control</string>
    <string name="torSummary">Enable to redirect non-Tor traffic through Tor</string>
    <string name="tor_profile">Tor control</string>
    <string name="ui_chains6_title">IPv6 Chains</string>
    <string name="ui_chains_title">IPv4 Chains</string>
    <string name="ui_prefs_title">UI Preferences</string>
    <string name="ui_themes_header">Themes</string>
    <string name="uid">By UID</string>
    <string name="vpnSummary">Enable to control VPN permissions separately</string>
    <string name="vpn_profile">VPN control</string>
    <string name="widget_prefs_title">Widget positions</string>
    <string name="widgets">Widgets</string>
    <string name="xTitle">Widget X position</string>
    <string name="xTitleDialog">Set X position (number)</string>
    <string name="xTitleSummary">Manual override X position</string>
    <string name="yTitle">Widget Y position</string>
    <string name="yTitleDialog">Set Y position (number)</string>
    <string name="yTitleSummary">Manual override Y position</string>
</resources>