<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_search"
        android:id="@id/menu_search"
        android:title="@string/Search"
        app:showAsAction="always|collapseActionView" />
    <item
        android:icon="@drawable/ic_allow"
        android:id="@id/menu_mode"
        android:title="@string/mode"
        app:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@id/allowmode"
                    android:checked="true"
                    android:title="@string/mode_whitelist"
                    app:showAsAction="always" />
                <item
                    android:id="@id/blockmode"
                    android:title="@string/mode_blacklist"
                    app:showAsAction="always" />
            </group>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_sort"
        android:id="@id/menu_sort"
        android:title="@string/access_sort"
        app:showAsAction="always">
        <menu>
            <group
                android:checkableBehavior="single">
                <item
                    android:id="@id/sort_default"
                    android:checked="true"
                    android:title="@string/defaultsort"
                    app:showAsAction="always" />
                <item
                    android:id="@id/sort_lastupdate"
                    android:title="@string/lastupdated"
                    app:showAsAction="always" />
                <item
                    android:id="@id/sort_uid"
                    android:title="@string/uid"
                    app:showAsAction="always" />
            </group>
        </menu>
    </item>
    <item
        android:icon="@drawable/ic_flow"
        android:id="@id/menu_list_item"
        android:title="@string/menu"
        app:showAsAction="always">
        <menu>
            <item
                android:icon="@drawable/notification"
                android:id="@id/menu_toggle"
                android:title=""
                app:showAsAction="always|withText" />
            <item
                android:icon="@drawable/ic_apply_menu"
                android:id="@id/menu_apply"
                android:title=""
                app:showAsAction="always|withText" />
            <item
                android:icon="@drawable/ic_log"
                android:id="@id/menu_log"
                android:title="@string/show_log"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_rules"
                android:id="@id/menu_rules"
                android:title="@string/showrules"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_script"
                android:id="@id/menu_setcustom"
                android:title="@string/set_custom_script"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_preference"
                android:id="@id/menu_preference"
                android:title="@string/preferences"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_export"
                android:id="@id/menu_export"
                android:title="@string/exports"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_import"
                android:id="@id/menu_import"
                android:title="@string/imports"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_help"
                android:id="@id/menu_help"
                android:title="@string/help"
                app:showAsAction="always" />
            <item
                android:icon="@drawable/ic_exit"
                android:id="@id/menu_exit"
                android:title="@string/exit"
                app:showAsAction="always" />
        </menu>
    </item>
</menu>